--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
+/*
+    #2196F3 -> primary
+    #1565C0 -> secondary
+    #64B5F6 -> highlight
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     overflow-x: hidden;
+    margin:0;
+    padding:0;
+    text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
 }
 .bkg-red {
     background-color: red;
@@ -19,7 +31,8 @@ body {
 .col {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 25%;
+    padding: 15px;
 }
 
 .col-20 {
@@ -32,17 +45,42 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: rgba(255, 0, 0, 0.306);
+    background-color: #2196F3;
+    width: 100%;
+    height: 50px;
+    padding: 15px;
+    justify-content: space-between;
 }
 
 #navbar > p {
     margin-left: 5px;
 }
 
+#navbar-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+#navbar-right > a {
+    text-decoration: none;
+    font-size: 20px;
+    padding: 5px;
+}
+
+#navbar-right > a:hover {
+    color: #1565C0
+}
+
+.input-bordered {
+    border-radius: 5px;
+    border: 1px solid;
+}
+
 #header {
     width: 100%;
     height: 300px;
-    background: url('../img/bkg_header.jpg') no-repeat center center fixed; 
+    background: url('../img/bkg_header.jpg'); 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -54,9 +92,30 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    background-color:  rgb(33, 149, 243);
+    padding:25px;
+}
+
+#body-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    box-shadow: rgba(0, 0, 0, 0.75) 10px 10px 12px 0px;
+    background-color: #64B5F6;
+    padding:20px;
 }
 
 #divider {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    text-transform: uppercase;
+    padding:15px;
+}
+
+#divider-content {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -68,6 +127,8 @@ body {
     flex-direction: row;
     justify-content: center;
     margin-top: 15px;
+    background-color: #2196F3;
+    padding: 20px;
 }
 
 #contact-form > form {
@@ -75,13 +136,22 @@ body {
 }
 
 .width-100 {
-    width:100%
+    width:100%;
+    height: 40px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
+.height-150 {
+    height: 150px;
+}
 #footer {
     width: 100%;
-    position: absolute;
+    position: relative;
     bottom: 0;
+    padding: 20px;
+    background-color: #ffe442;
+    font-size: 28px;
 }
 
 .footer-items {
@@ -89,4 +159,25 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+}
+
+.button {
+    background-color: white; /* Green */
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.social-div {
+    display: flex;
+    align-items: center;
+}
+
+.margin-left-10 {
+    margin-left: 10px;
 }
